# grove

./: .gitignore  README.md  pyproject.toml  requirements-board.txt  requirements-index.txt  requirements-swarm.txt  requirements.txt  scripts_temp_add.py
grove/: __init__.py  cli.py
grove/board/: install.sh
grove/board/scripts/: _project.py  close_sprint.py  log_learning.py  start_sprint.py  update_story.py  validate_board.py
grove/board/skills/grill-me/: SKILL.md
grove/board/skills/init/: SKILL.md
grove/board/skills/retro/: SKILL.md
grove/board/skills/run/: SKILL.md
grove/board/skills/update/: SKILL.md
grove/swarm/: claude_judge.py  claude_ops.py  local_react_agent.py  ollama_client.py  orchestrator.py  sampling_layer.py  worker_pool.py
schema/agile/: agile.sql
schema/swarm/: swarm.sql
tests/board/: conftest.py  test_schema.py  test_stories.py  test_validate_board.py
tests/swarm/: conftest.py  test_ollama_client.py  test_react_agent.py  test_sampling_layer.py
